--- a/css/style.css
+++ b/css/style.css
@@ -1843,8 +1843,8 @@ main footer .copyright_wrp .copy_content p {
 .wtsapp-sticky-wrp a {
   width: 55px;
   height: 55px;
-  bottom: 39px;
-  left: 10px;
+  bottom: 118px;
+  right: 20px;
   background-color: #25d366;
   position: fixed;
   color: #FFF;
@@ -1852,9 +1852,8 @@ main footer .copyright_wrp .copy_content p {
   z-index: 99;
   border-radius: 50px;
   text-align: center;
-  /* font-size: 30px; */
-  -webkit-box-shadow: 2px 2px 3px #999;
-  box-shadow: 2px 2px 3px #999;
+  -webkit-box-shadow: 0px 0px 3px 3px #4caf50;
+          box-shadow: 0px 0px 3px 3px #4caf50;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1866,10 +1865,54 @@ main footer .copyright_wrp .copy_content p {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-animation: boxshadow1 3s linear infinite;
+          animation: boxshadow1 3s linear infinite;
+  overflow: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .wtsapp-sticky-wrp a .my-float {
   font-size: 38px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.wtsapp-sticky-wrp a .my-float:hover {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+@-webkit-keyframes boxshadow1 {
+  0%, 100% {
+    -webkit-box-shadow: 0px 0px 3px 3px #4caf50;
+            box-shadow: 0px 0px 3px 3px #4caf50;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  50% {
+    -webkit-box-shadow: 0px 0px 4px 5px #226124;
+            box-shadow: 0px 0px 4px 5px #226124;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+@keyframes boxshadow1 {
+  0%, 100% {
+    -webkit-box-shadow: 0px 0px 3px 3px #4caf50;
+            box-shadow: 0px 0px 3px 3px #4caf50;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  50% {
+    -webkit-box-shadow: 0px 0px 4px 5px #226124;
+            box-shadow: 0px 0px 4px 5px #226124;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
 }
 
 .social-menu {
@@ -1957,7 +2000,7 @@ main footer .copyright_wrp .copy_content p {
 
 .BT-top {
   right: 23px;
-  bottom: 62px;
+  bottom: 38px;
   position: fixed;
   z-index: 3;
   display: none;
@@ -3284,6 +3327,10 @@ main footer .copyright_wrp .copy_content p {
   .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
     font-size: 4em;
   }
+  .Slimming_Wrapper .Slimming-Banner {
+    height: 600px;
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 1300px) {
@@ -3325,6 +3372,13 @@ main footer .copyright_wrp .copy_content p {
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
     padding: 1rem 1.9rem;
     font-size: 1.1em;
+  }
+  .wtsapp-sticky-wrp a {
+    width: 50px;
+    height: 50px;
+  }
+  .wtsapp-sticky-wrp a .my-float {
+    font-size: 35px;
   }
 }
 
@@ -3635,7 +3689,7 @@ main footer .copyright_wrp .copy_content p {
     max-width: 90%;
   }
   .Slimming_Wrapper .Slimming-Banner {
-    height: 49vh;
+    height: 460px;
     width: 100%;
   }
   .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading {
@@ -3759,6 +3813,7 @@ main footer .copyright_wrp .copy_content p {
   }
   .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
     font-size: 3em;
+    text-shadow: 1px 1px 5px #00000057;
   }
   .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
     padding: 0.5rem 4rem .5em 0;
@@ -3769,7 +3824,7 @@ main footer .copyright_wrp .copy_content p {
     font-size: 1.1em;
   }
   .Slimming_Wrapper .Slimming-Banner {
-    height: 43vh;
+    height: 421px;
     width: 100%;
   }
   .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading {
@@ -3807,6 +3862,12 @@ main footer .copyright_wrp .copy_content p {
   }
   .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left figure img {
     max-width: 90%;
+  }
+  main header .Nav-wrp nav .nav-item ul li a {
+    font-size: 15px !important;
+  }
+  main header .Nav-wrp nav .nav-item ul .drop_down li a {
+    font-size: 15px !important;
   }
 }
 
@@ -3959,7 +4020,7 @@ main footer .copyright_wrp .copy_content p {
     max-width: 23%;
   }
   .Slimming_Wrapper .Slimming-Banner .Banner_Content {
-    padding: 1rem 0 0;
+    padding: 3rem 0 0;
   }
   .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
     font-size: 2em;
@@ -3969,8 +4030,11 @@ main footer .copyright_wrp .copy_content p {
     font-size: 1em;
   }
   .Slimming_Wrapper .Slimming-Banner {
-    height: 39vh;
+    height: 316px;
     width: 100%;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child {
+    width: 60% !important;
   }
   .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
     font-size: 1.50em;
@@ -3995,6 +4059,51 @@ main footer .copyright_wrp .copy_content p {
   .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right h3 {
     font-size: 1.190em;
     padding: 0 0 .7rem;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 {
+    font-size: 1.4em;
+    line-height: 1.7;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+    left: -29px;
+    top: -63px;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+    right: -29px;
+    bottom: -63px;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading h2 {
+    font-size: 1.6em;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .bottom_Bar h2 {
+    font-size: 1.18em;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt h2 {
+    font-size: 1.3em;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt p {
+    font-size: 14px;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt a:hover {
+    font-size: 15px;
+    padding: .7rem 1.1rem;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt a {
+    font-size: 15px;
+    padding: .7rem 1.1rem;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .spot-area-wrp figure img {
+    max-width: 100%;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content {
+    padding: 1rem 1rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .En-left.En-cmn01 {
+    margin: 0 2.5rem 0 0;
+    /* width: 100%; */
   }
 }
 
@@ -4262,6 +4371,95 @@ main footer .copyright_wrp .copy_content p {
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
     height: 407px;
   }
+  .Slimming_Wrapper .Slimming-Banner {
+    height: 256px;
+    width: 100%;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+    font-size: 1.59em;
+    text-shadow: 1px 1px 2px #00000057;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
+    padding: 0.5rem 4rem .5em 0;
+    font-size: 14px;
+    line-height: 1.7;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb li a {
+    font-size: 15px;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child {
+    width: 70% !important;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
+    font-size: 1.3em;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+    padding: 0 0 1rem;
+    font-size: 14px;
+    line-height: 1.7;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h2 {
+    font-size: 1.05em;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right h3 {
+    font-size: 1.04em;
+    padding: 0 0 .7rem;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right p {
+    letter-spacing: .5px;
+    line-height: 1.7;
+    font-size: 14px;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left {
+    width: 100%;
+    text-align: center;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left figure img {
+    max-width: 54%;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right {
+    width: 100%;
+    padding: 3rem 0 1rem;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content {
+    padding: 2rem 0 0;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .spot-area-wrp h2 {
+    font-size: 1.4em;
+    padding: 0 0 1.2rem;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+    left: -112px;
+    top: -63px;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+    right: -112px;
+    bottom: -63px;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 {
+    font-size: 1.1em;
+    line-height: 1.6;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content {
+    padding: 1rem 1rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 i.fas.fa-chevron-right {
+    vertical-align: revert;
+    font-size: 16px;
+  }
+  .En-cmn01 {
+    margin: 0 0.3rem 0 0 !important;
+    /* width: 100%; */
+  }
+  main header .Nav-wrp nav .nav-item ul li a {
+    font-size: 14px !important;
+  }
+  main header .Nav-wrp nav .nav-item ul .drop_down li a {
+    font-size: 14px !important;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -4423,6 +4621,61 @@ main footer .copyright_wrp .copy_content p {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .Slimming_Wrapper .Slimming-Banner {
+    height: 219px;
+    width: 100%;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+    font-size: 1.29em;
+    text-shadow: 1px 1px 2px #00000057;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content {
+    padding: 1rem 0 0;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
+    padding: 0.5rem 4rem .5em 0;
+    font-size: 13px;
+    line-height: 1.7;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb {
+    padding: .5rem 0 0;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading {
+    padding: 1.2rem 0 1.2rem;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
+    font-size: 1.2em;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+    padding: 0 0 .5rem;
+    font-size: 14px;
+    line-height: 1.6;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right h3 {
+    font-size: 1.04em;
+    padding: 0 0 .9rem;
+    text-align: center;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content .En-cmn01 h2 {
+    font-size: 1.1em;
+    line-height: 1.6;
+    padding: .4rem 0;
+  }
+  .En-left.En-cmn01 {
+    margin: 0 0rem 0 0 !important;
+    /* width: 100%; */
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading h2 {
+    font-size: 1.5em;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+    left: -70px;
+    top: -63px;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+    right: -70px;
+    bottom: -63px;
+  }
 }
 
 @media only screen and (max-width: 375px) {
@@ -4430,23 +4683,23 @@ main footer .copyright_wrp .copy_content p {
     width: 60%;
   }
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child h1 {
-    font-size: 1.1em;
+    font-size: 14px;
     font-weight: 550;
   }
   main .Banner_Wrapper .banner-child .banner-sub-child {
-    height: 249px;
+    height: 194px;
   }
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content {
-    height: 211px;
-    padding: 1rem 0 0;
+    height: 185px;
+    padding: 0rem 0 0;
   }
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a {
-    padding: .7rem .8rem;
+    padding: .6rem .7rem;
     margin: .1rem 0 0;
-    font-size: 13px;
+    font-size: 11px;
   }
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
-    font-size: 13px;
+    font-size: 11px;
     padding: .5rem 0 .8rem;
     line-height: 1.6;
   }
@@ -4456,7 +4709,6 @@ main footer .copyright_wrp .copy_content p {
     font-size: 3em !important;
   }
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
-    font-size: 13px;
     padding: .5rem 0 .8rem;
     line-height: 1.6;
   }
@@ -4595,6 +4847,81 @@ main footer .copyright_wrp .copy_content p {
   }
   main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child {
     width: 70%;
+  }
+  .wtsapp-sticky-wrp a {
+    width: 41px;
+    height: 40px;
+    bottom: 124px;
+    -webkit-box-shadow: 0px 0px 2px 2px #4caf50;
+            box-shadow: 0px 0px 2px 2px #4caf50;
+  }
+  .wtsapp-sticky-wrp a .my-float {
+    font-size: 28px;
+  }
+  .Slimming_Wrapper .Slimming-Banner {
+    height: 180px;
+    width: 100%;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content {
+    padding: 1rem 0 0;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
+    font-size: 1em;
+    text-shadow: 1px 1px 1px #00000057;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb li a {
+    font-size: 14px;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading h2 {
+    font-size: 1em;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .slim-heading {
+    padding: 1rem 0;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Slim_Service .Slim_content p {
+    padding: 0 0 .5rem;
+    font-size: 13px;
+    line-height: 1.6;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right p {
+    letter-spacing: .5px;
+    line-height: 1.7;
+    font-size: 13px;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-right {
+    padding: 2rem 0 1rem;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-heading h2 {
+    font-size: 1em;
+  }
+  .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left figure img {
+    max-width: 60%;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Slim-Grid-heading h2 {
+    font-size: 1.2em;
+    text-align: center;
+  }
+  .Slimming_Wrapper .Enquery_Wrp .Enquery-content {
+    padding: .5rem .5rem;
+  }
+  .Slimming_Wrapper .Enquery_Wrp {
+    margin: 1rem 0;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::before {
+    left: -22px;
+    top: -63px;
+  }
+  .Slimming_Wrapper .Slimming-grid_wrp .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-content .Hvr_cnt::after {
+    right: -22px;
+    bottom: -63px;
+  }
+  .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
+    padding: 0.5rem 3rem .5em 0;
+    font-size: 11px;
+    line-height: 1.7;
+  }
+  main header .Nav-wrp nav .nav-item ul .drop_down li a {
+    font-size: 14px !important;
   }
 }
 /*# sourceMappingURL=style.css.map */
