--- a/css/media.scss
+++ b/css/media.scss
@@ -838,6 +838,14 @@
         margin: 0 2.5rem 0 0;
         /* width: 100%; */
     }
+    .wtsapp-sticky-wrp a {
+        width: 46px;
+        height: 46px;
+        box-shadow: 0px 0px 2px 2px #4caf50;
+    }
+    .wtsapp-sticky-wrp a .my-float {
+        font-size: 33px;
+    }
     // ---end---here-----//
 }
 
