--- a/css/style.scss
+++ b/css/style.scss
@@ -1355,6 +1355,7 @@
         &:hover{
             opacity: .77;
             transition: all 0.3s ease-in-out;
+            box-shadow: 0 0 3px 3px #fff;
             .fa-angle-up{
               font-size: 1.1em;
               transition: all 0.3s ease-in-out;
