--- a/css/media.css
+++ b/css/media.css
@@ -832,6 +832,15 @@
     margin: 0 2.5rem 0 0;
     /* width: 100%; */
   }
+  .wtsapp-sticky-wrp a {
+    width: 46px;
+    height: 46px;
+    -webkit-box-shadow: 0px 0px 2px 2px #4caf50;
+            box-shadow: 0px 0px 2px 2px #4caf50;
+  }
+  .wtsapp-sticky-wrp a .my-float {
+    font-size: 33px;
+  }
 }
 
 @media only screen and (max-width: 576px) {
